# cdefmt

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md
bench/generation/: CMakeLists.txt  linkerscript.ld  main.c
bench/generation/config/: cdefmt_config.h
c/: CMakeLists.txt
c/examples/: CMakeLists.txt  generate_linkerscript.sh  main.c
c/examples/stdout/: CMakeLists.txt  main.c
c/lib/: CMakeLists.txt
c/lib/cdefmt/include/: cdefmt.h
cdefmt/config/: cdefmt_config.h
cdefmt/include/: cdefmt.h
decoder/: Cargo.toml
decoder/src/: decoder.rs  format.rs  lib.rs  log.rs  var.rs
examples/: CMakeLists.txt  main.c
examples/stdin/: Cargo.toml
examples/stdin/src/: main.rs
examples/stdout/: CMakeLists.txt  linkerscript.ld  main.c
examples/stdout-cpp/: CMakeLists.txt  main.cpp
examples/stdout/config/: cdefmt_config.h
include/: cdefmt.h
parser/: Cargo.toml
parser/src/: dwarf.rs  format.rs  lib.rs  log.rs  main.rs  metadata.rs  parser.rs  type.rs  var.rs
rust/: Cargo.toml
rust/cdefmt-parser/: Cargo.toml
rust/cdefmt-parser/src/: dwarf.rs  lib.rs  log.rs  parser.rs  type.rs  var.rs
rust/examples/stdin/: Cargo.toml
rust/examples/stdin/src/: main.rs
