[workspace]
members = ["decoder", "parser", "examples/stdin"]
resolver = "2"

[workspace.package]
authors = ["Tal Risin <tal@risin.dev>"]
edition = "2021"
keywords = ["cdefmt", "defmt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/risint96/cdefmt"
version = "0.7.0"

[workspace.dependencies]
anyhow = "1.0"
cdefmt-decoder = { path = "decoder", version = "0.7.0" }
cdefmt-parser = { path = "parser", version = "0.7.0" }
clap = { version = "4.5", features = ["derive"] }
gimli = "0.33"
lazy-regex = "3.6"
memmap2 = "0.9"
object = "0.38"
rformat = { git = "https://github.com/RisinT96/rformat.git", version = "0.2.0" }
thiserror = "2.0"
