[workspace]
members = ["decoder", "parser", "examples/stdin"]
resolver = "3"

[workspace.package]
authors = ["Tal Risin <tal@risin.dev>"]
edition = "2024"
keywords = ["cdefmt", "defmt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/risint96/cdefmt"
version = "0.8.0"

[workspace.dependencies]
anyhow = "1.0"
cdefmt-decoder = { path = "decoder", version = "0.8.0" }
cdefmt-parser = { path = "parser", version = "0.8.0" }
clap = { version = "4.5", features = ["derive"] }
gimli = "0.33"
memmap2 = "0.9"
object = "0.38"
rformat = { git = "https://github.com/RisinT96/rformat.git", version = "0.2.0" }
thiserror = "2.0"
