[package]
authors.workspace = true
description = "Decodes cdefmt log frames"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "cdefmt-decoder"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
gimli = "0.31"
object = "0.36"
lazy-regex = "3.4"
cdefmt-parser = { path = "../parser", version = "0.7.0" }
thiserror = "2.0"
rformat = { git = "https://github.com/RisinT96/rformat.git", version = "0.2.0" }
