[package]
authors.workspace = true
description = "Decodes cdefmt log frames"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "cdefmt-decoder"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
gimli.workspace = true
object.workspace = true
lazy-regex.workspace = true
cdefmt-parser.workspace = true
thiserror.workspace = true
rformat.workspace = true
