[package]
authors = ["Tal Risin"]
description = "Parsing library for cdefmt log frames"
edition = "2021"
keywords = ["cdefmt", "defmt"]
license = "MIT"
name = "cdefmt-parser"
readme = "../README.md"
repository = "https://github.com/risint96/cdefmt"
version = "0.5.0"

[dependencies]
gimli = "0.31"
object = "0.36"
thiserror = "2.0"
