[package]
authors.workspace = true
description = "Parsing library for cdefmt log frames"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "cdefmt-parser"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
gimli = "0.31"
object = "0.36"
thiserror = "2.0"
