[package]
authors.workspace = true
description = "Parsing library for cdefmt log frames"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "cdefmt-parser"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
gimli.workspace = true
object.workspace = true
thiserror.workspace = true
