[package]
authors.workspace = true
description = "Reads cdefmt log frames encoded as TL from stdin, decodes them, and prints them to stdout"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "stdin"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdefmt-decoder = { path = "../../decoder", version = "0.7.0" }
clap = { version = "4.5", features = ["derive"] }
gimli = "0.31"
memmap2 = "0.9"
